# TinyProject

./: .gitignore  CMakeLists.txt  README.md  main.tex  train.py
.github/workflows/: cmake.yaml
include/: LinearSystem.h  Matrix.h  PosSymLinSystem.h  Vector.h
src/: LinearSystem.cpp  Matrix.cpp  PosSymLinSystem.cpp  Vector.cpp  main.cpp
